syntax = "proto3";
import "commontype/TopicMessage.proto";
import "inboxservice/TopicFilterOption.proto";

option java_multiple_files = true;
option java_package = "com.baidu.bifromq.inbox.storage.proto";
option java_outer_classname = "InboxMessageProtos";

package inboxservice;

message InboxMessage{
  uint64 seq = 1;
  commontype.TopicMessage msg = 2;
  map<string, TopicFilterOption> matchedTopicFilter = 3;
}

message InboxMessageList{
  repeated InboxMessage message = 1;
}